# tools-max10_svf_cleaner

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile
.github/workflows/: build-winux.yml  release-winux.yml
docs/: README.md
src/: main.cpp
src/include/: version.h.in
